--- a/HSCoreApp/Pages/MoreInfo.cshtml
+++ b/HSCoreApp/Pages/MoreInfo.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = "More Info";
 }
 <h1>@ViewData["Title"]</h1>
+<img src="https://yt3.ggpht.com/a/AATXAJxWVfGjxxoL11FjDbcOSRiDGJf26E__oHgx8zeHgqk=s100-c-k-c0xffffffff-no-rj-mo">
 
 <p>See more videos like this on my youtube channel and comment. <a href="https://www.youtube.com/channel/UCx67Pa91aaySqf1XydO2FoQ" target="_blank"> HERE</a></p>
 
 <p>Dont forget to SUBSCRIBE and hit the LIKE and BELL button to be always updated on the new coming movies</p>
 <script src="https://apis.google.com/js/platform.js"></script>
 <div class="g-ytsubscribe" data-channelid="UCx67Pa91aaySqf1XydO2FoQ" data-layout="default" data-count="hidden"></div>
+
+<p>For professional purposes please email me to:</p>
+<a href="mailto: hugo.silva@execut3.com">hugo.silva@execut3.com</a>
 
 
